--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -5,7 +5,7 @@
 
   <h1>메인화면</h1>
   <li class="nav-item">
-  <a class="nav-link"><span id="user_name"></span>님 반갑습니다!</a>
+    <span id="user_name">{{ name }}</span>님 반갑습니다!
   </li>
 
   <li class="nav-item">
