--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <p>아이디:</p>
     <br>
-    <input type="text" name="username" required="required">
+    <input type="text" name="userid" required="required">
     <br>
     <p>비밀번호:</p>
     <br>
