--- a/crudmember/templates/crudmember/signup.html
+++ b/crudmember/templates/crudmember/signup.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <h1>회원가입</h1> 
-{{error}}
+{{ error }}
 
 <form method="POST" action="{% url 'crudmember:signup' %}">
     {% csrf_token %}
     <p>아이디:</p>
     <br>
-    <input type="text" name="username" required="required">
+    <input type="text" name="userid" required="required">
     <br>
     <p>비밀번호:</p>
     <br>
@@ -18,6 +18,14 @@
     <br>
     <input type="password" name="password2" required="required">
     <br>
+    <p>성명 :</p>
+    <input type="text" name="name" required="required">
+    <p>휴대폰 번호 :</p>
+    <input type="tel" name="tel" required="required">
+    <p>사진</p>
+    <input type="file" name="photo">
+    <p>서류 :</p>
+    <input type="file" name="file">
     <br>
     <input type="submit" value="회원가입">
 </form>
