--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,50 @@
-{% load static %}
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
     <style>
-        .main-menu {
-            background-color: black;
-            color: white;
-            padding: 16px;
-            font-size: 16px;
-            border: none;
+        body {
+            width: 100vw;
+            margin: 0;
         }
 
-        .main {
-            position: relative;
-            display: inline-block;
+        .title {
+            margin-top: 5px;
+            text-align: center;
+            margin-right: 25px;
+            margin-left: 870px;
+            width: 140px;
+            height: 80px;
+        }
+
+        .king {
+            font-size: 60px;
+            color: #cf1b1b;
+        }
+
+        .pro {
+            font-size: 36px;
+            color: #cf1b1b;
+        }
+
+        #topMenu {
+            height: 100px;
+            margin-left: 6vw;
+            width: 88vw;
+            display: flex;
+            margin-top: 20px;
+        }
+
+        .menu-size {
+            width: 11vw;
+            color: white;
+            background-color: #2d2d2d;
+            text-align: center;
+            height: 35px;
+            padding-top: 10px;
         }
 
         .main-menu-content {
@@ -28,6 +54,11 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
+        }
+
+        .main {
+            position: relative;
+            display: inline-block;
         }
 
         .main-menu-content a {
@@ -49,70 +80,136 @@
             text-decoration: none;
             color: white;
         }
+
+        .flex {
+            display: flex;
+            margin-top: 40px;
+        }
+
+        .aside {
+            width: 20vw;
+        }
+
+        .asideBorder {
+            border-right: 1px solid #2d2d2d;
+            border-bottom: 1px solid #2d2d2d;
+            border-radius: 15px;
+            height: 500px;
+            width: 180px;
+            margin-left: 50px;
+        }
+
+        .asideTitle {
+            font-size: 28px;
+            border-bottom: 1px solid #2d2d2d;
+            width: 150px;
+            margin-bottom: 20px;
+            padding-top: 5px;
+            padding-bottom: 2px;
+        }
+
+        .asideLi {
+            list-style: none;
+            margin-top: 10px;
+            font-size: 18px;
+            padding-left: 10px;
+        }
+
+        .section {
+            width: 80vw;
+        }
+
+        .notice {
+            text-decoration: none;
+            color: black;
+        }
+
+        .submenu-link {
+            color: black;
+        }
+
+        .section {
+            height: 500px;
+            width: 1250px;
+        }
+
+        .titleLink {
+            text-decoration: none;
+            width: 140px;
+            height: 80px;
+        }
     </style>
 </head>
+
 <body>
     <header>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">공지사항</a></button>
-            <div class="main-menu-content">
-                <a href="#">기사님 공지사항</a>
-                <a href="#">사무실 공지사항</a>
+        <div class="title">
+            <span class="king">킹</span>
+            <span class="pro">배차</span>
+        </div>
+        <nav id="topMenu">
+            <div class="main">
+                <div class="menu-size"><a href="/notice" class="menu-link">공지사항</a></div>
+                <div class="main-menu-content">
+                    <a href="/notice/driver" class="submenu-link">기사님
+                        공지사항</a>
+                    <a href="/notice/office" class="submenu-link">사무실
+                        공지사항</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">경리시스템</a></button>
-            <div class="main-menu-content">
-                <a href="#">급여 관리</a>
-                <a href="#">지출내역</a>
-                <a href="#">수입내역</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">경리시스템</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">급여 관리</a>
+                    <a href="#" class="submenu-link">지출내역</a>
+                    <a href="#" class"submenu-link">수입내역</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">배차시스템</a></button>
-            <div class="main-menu-content">
-                <a href="#">배차지시서</a>
-                <a href="#">배차스케쥴</a>
-                <a href="#">배차관리</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">배차시스템</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">배차지시서</a>
+                    <a href="#" class="submenu-link">배차스케줄</a>
+                    <a href="#" class="submenu-link">배차관리</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">인사관리</a></button>
-            <div class="main-menu-content">
-                <a href="#">인사등록</a>
-                <a href="#">회원 관리</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">인사관리</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">인사등록</a>
+                    <a href="#" class="submenu-link">회원 관리</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">차량 관리</a></button>
-            <div class="main-menu-content">
-                <a href="#">차량현황</a>
-                <a href="#">차량정비</a>
-                <a href="#">정기점검</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">차량관리</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">차량현황</a>
+                    <a href="#" class="submenu-link">차량정비</a>
+                    <a href="#" class="submenu-link">정기점검</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">서류관리</a></button>
-            <div class="main-menu-content">
-                <a href="#">서류목록</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">서류관리</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">서류목록</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">사고 관리</a></button>
-            <div class="main-menu-content">
-                <a href="#">사고처리</a>
-                <a href="#">보험처리</a>
-                <a href="#">법률지원</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">사고관리</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">사고처리</a>
+                    <a href="#" class="submenu-link">보험처리</a>
+                    <a href="#" class="submenu-link">법률지원</a>
+                </div>
             </div>
-        </div>
-        <div class="main">
-            <button class="main-menu"><a href="#" class="menu-link">설정</a></button>
-            <div class="main-menu-content">
-                <a href="#">비밀번호 변경</a>
-                <a href="#">개인정보 변경</a>
+            <div class="main">
+                <div class="menu-size"><a href="#" class="menu-link">설정</a></div>
+                <div class="main-menu-content">
+                    <a href="#" class="submenu-link">비밀번호 변경</a>
+                    <a href="#" class="submenu-link">개인정보 변경</a>
+                </div>
             </div>
-        </div>
-        </div>
+        </nav>
     </header>
 
     {% block content %}
