--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    ##<h1>{{ view_cnt.count }}</h1>
+    <h1>{{ view_cnt }}</h1>
     <p>제목:{{ notice.title }}</p>
     <p>내용:{{ notice.content }}</p>
     <p>작성자:{{ notice.creator }}</p>
