--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Kingbus ERP</title>
+    {% block head %}
+    {% endblock %}
     <style>
         body {
             width: 100vw;
@@ -162,7 +164,7 @@
                 <div class="main-menu-content">
                     <a href="#" class="submenu-link">급여 관리</a>
                     <a href="#" class="submenu-link">지출내역</a>
-                    <a href="#" class"submenu-link">수입내역</a>
+                    <a href="#" class="submenu-link">수입내역</a>
                 </div>
             </div>
             <div class="main">
