--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h2>{{error}}</h2>
     <div class="size">
         <fieldset class="fieldset">
             <legend class="title"><strong>킹배차</strong></legend>
