--- a/dispatch/templates/dispatch/order_edit.html
+++ b/dispatch/templates/dispatch/order_edit.html
@@ -1,1 +1,18 @@
-order_edit
+
+<form method="POST" action="">
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="form-group">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        <input
+        type="{{ field.field.widget.input_type }}"
+        class="form-control"
+        id="{{ field.id_for_label }}"
+        placeholder="{{ field.label }}"
+        name="{{ field.name }}"
+        value="{{ field.value }}"
+        />
+    </div>
+    {% endfor %}
+    <input type="submit" value="등록">
+</form>
