--- a/dispatch/templates/dispatch/order_create.html
+++ b/dispatch/templates/dispatch/order_create.html
@@ -1,16 +1,21 @@
-<form method="POST" action="">
-    {% csrf_token %}
-    {% for field in form %}
-    <div class="form-group">
-        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-        <input
-        type="{{ field.field.widget.input_type }}"
-        id="{{ field.id_for_label }}"
-        placeholder="{{ field.label }}"
-        name="{{ field.name }}"
-        />
-    </div>
-    {% endfor %}
-    <input type="date" name="first_departure_date">
-    <input type="submit" value="등록">
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+{{ error }}
+    <form method="POST" action="">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="form-group">
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            <input
+            type="{{ field.field.widget.input_type }}"
+            id="{{ field.id_for_label }}"
+            placeholder="{{ field.label }}"
+            name="{{ field.name }}"
+            />
+        </div>
+        {% endfor %}
+        <input type="date" name="first_departure_date">
+        <input type="submit" value="등록">
+    </form>
+{% endblock %}
