--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for d in order_list%}
-        <p>{{d.pub_date}}</p>
-        
+        <p><a href="{% url 'dispatch:order_detail' d.pk %}">{{ d.pk }}</a></p>
+        <!--  보여줄 항목 정하기 -->
     {% endfor %}
 {% endblock %}
