--- a/dispatch/templates/dispatch/order_create.html
+++ b/dispatch/templates/dispatch/order_create.html
@@ -14,6 +14,7 @@
             />
         </div>
         {% endfor %}
+        <label for="first_departure_date">출발날짜</label>
         <input type="date" name="first_departure_date">
         <input type="submit" value="등록">
     </form>
