--- a/dispatch/templates/dispatch/order_create.html
+++ b/dispatch/templates/dispatch/order_create.html
@@ -3,7 +3,18 @@
 {% block content %}
     <form method="POST" action="">
         {% csrf_token %}
-        {% for field in form %}
+        {% for field in order_form %}
+        <div class="form-group">
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            <input
+            type="{{ field.field.widget.input_type }}"
+            id="{{ field.id_for_label }}"
+            placeholder="{{ field.label }}"
+            name="{{ field.name }}"
+            />
+        </div>
+        {% endfor %}
+        {% for field in consumer_form %}
         <div class="form-group">
             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
             <input
