--- a/dispatch/templates/dispatch/order_detail.html
+++ b/dispatch/templates/dispatch/order_detail.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <p>작성자 : {{order.writer}}</p>
-    <p>고객 : {{order.consumer}}</p>
+    <p>고객 이름: {{order.consumer.name}}</p>
+    <p>고객 전화번호: {{order.consumer.tel}}</p>
     <p>버스 대수 : {{order.bus_cnt}}</p>
     <p>가격 : {{order.price}}</p>
     <p>왕복or편도 : {{order.kinds}}</p>
