dispatch.views.order_delete, ScheduleList, ScheduleDetail 완료

--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -30,7 +30,7 @@
                 <li><a href="{% url 'crudmember:signup' %}">회원가입</a></li>
             </ul>
         </fieldset>
-        <script src="script.js"></script>
+        <script src="#"></script>
 </body>
 
 </html>
