--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="main">
-                <div class="menu-size"><a href="/dispatch/today" class="menu-link">배차시스템</a></div>
+                <div class="menu-size"><a href="/dispatch/" class="menu-link">배차시스템</a></div>
                 <div class="main-menu-content">
                     <a href="#" class="submenu-link">배차지시서</a>
                     <a href="#" class="submenu-link">배차스케줄</a>
