--- a/dispatch/templates/dispatch/order_edit.html
+++ b/dispatch/templates/dispatch/order_edit.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{{order}}
+<!--
     <form method="POST" action="">
         {% csrf_token %}
         {% for field in order_form %}
@@ -31,4 +33,5 @@
         {% endfor %}
         <input type="submit" value="등록">
     </form>
+-->
 {% endblock %}
