--- a/humanresource/templates/HR/member_create.html
+++ b/humanresource/templates/HR/member_create.html
@@ -1,1 +1,22 @@
 member_create
+
+<form method="POST" action="">
+    {% csrf_token %}
+    {{ member_form }}
+    <input type="submit" value="등록">
+</form>
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+
+<script>
+    // This code activates flatpickr on fields with the 'datetimefield' class when the document has loaded
+    window.addEventListener("DOMContentLoaded", function () {
+        flatpickr(".datetimefield", {
+            enableTime: true,
+            dateFormat: "Y-m-d",
+        });
+    });
+</script>
